--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <p>
             <button id="save">Save Track</button>
             <button id="load">Load Track</button>
+            <input type="file" name="inputfile" id="inputfile">
         </p>
+        <pre id="generationViewer"></pre>
+        <br>
+        <pre id="output"></pre>
     </body>
 </html>
