Saving track fixed
yay track saving

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
     </head>
     <body>
         <div id="main"></div>
-        <p>
-            <button id="save">Save Track</button>
-            <button id="load">Load Track</button>
-            <input type="file" name="inputfile" id="inputfile">
-        </p>
+        <button id="save">Save Track</button>
+        <button id="load">Load Track</button>
+        <input type="file" name="inputfile" id="inputfile">
         <pre id="generationViewer"></pre>
-        <br>
+        <pre id="carAmountViewer"></pre>
         <pre id="output"></pre>
     </body>
 </html>
