--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <div id="main"></div>
-        <button id="save">Save Track</button>
-        <button id="load">Load Track</button>
-        <input type="file" name="inputfile" id="inputfile">
+        <p>
+            <div id="main"></div>
+            <button id="save">Save Track</button>
+            <button id="load">Load Track</button>
+            <button id="rays">Show Rays</button>
+            <input type="file" name="inputfile" id="inputfile">
+        </p>
         <pre id="generationViewer"></pre>
         <pre id="carAmountViewer"></pre>
         <pre id="output"></pre>
