--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <body>
         <p>
             <div id="main"></div>
+            <button id="killAll">Kill All</button>
             <button id="save">Save Track</button>
             <button id="load">Load Track</button>
             <button id="rays">Show Rays</button>
