--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
     <body>
         <div class="box">
             <p><span class="text">Timer:</span> <span class="text" id="stopwatch">00:00:00</span></p>
-            <p><span class="text">Best Time: </span><span class="text" id="bestTime"></span></p>
-            <p class="text">Gewicht 1:</p>
-            <p class="text">Gewicht 2:</p>
-            <p class="text">Gewicht 3:</p>
-            <p class="text">Gewicht 4:</p>
-            <p class="text">Gewicht 5:</p>
-            <p class="text">Gewicht 6:</p>
-            <p class="text">Gewicht 7:</p>
-            <p class="text">Gewicht 8:</p>
-            <p class="text">Gewicht 9:</p>
+            <!-- <p><span class="text">Best Time: </span><span class="text" id="bestTime">00:00:00</span></p> -->
+            <pre class="text" id="generationViewer"></pre>
+            <pre class="text" id="carAmountViewer"></pre>
+
+            <p class="text" id="gewicht1">Gewicht 1:</p>
+            <p class="text" id="gewicht2">Gewicht 2:</p>
+            <p class="text" id="gewicht3">Gewicht 3:</p>
+            <p class="text" id="gewicht4">Gewicht 4:</p>
+            <p class="text" id="gewicht5">Gewicht 5:</p>
+            <p class="text" id="gewicht6">Gewicht 6:</p>
+            <p class="text" id="gewicht7">Gewicht 7:</p>
+            <p class="text" id="gewicht8">Gewicht 8:</p>
+            <p class="text" id="gewicht9">Gewicht 9:</p>
 
         </div>
         <div id="main"></div>
         <button id="save">Save Track</button>
         <button id="load">Load Track</button>
-        <br>
         <button id="rays">Show Rays</button>
         <input type="file" name="inputfile" id="inputfile">
         
-        <pre id="generationViewer"></pre>
-        <pre id="carAmountViewer"></pre>
         <pre id="output"></pre>
     </body>
 </html>
