--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="box">
             <p><span class="text">Timer:</span> <span class="text" id="stopwatch">00:00:00</span></p>
             <p><span class="text">Vorige Tijd: </span><span class="text" id="bestTime">00:00:00</span></p>
+            <pre class="text" id="framerateViewer"></pre>
             <pre class="text" id="generationViewer"></pre>
             <pre class="text" id="carAmountViewer"></pre>
         </div>
